--- a/RSSFeedAggAndroid/app/src/main/res/menu/activity_main_drawer.xml
+++ b/RSSFeedAggAndroid/app/src/main/res/menu/activity_main_drawer.xml
@@ -3,34 +3,35 @@
 
     <group android:checkableBehavior="single">
         <item
-            android:id="@+id/nav_camera"
-            android:icon="@drawable/ic_menu_camera"
-            android:title="Import" />
+            android:id="@+id/navl_today"
+            android:title="@string/action_today" />
         <item
-            android:id="@+id/nav_gallery"
-            android:icon="@drawable/ic_menu_gallery"
-            android:title="Gallery" />
+            android:id="@+id/navl_readLater"
+            android:title="@string/action_readLater" />
         <item
-            android:id="@+id/nav_slideshow"
-            android:icon="@drawable/ic_menu_slideshow"
-            android:title="Slideshow" />
-        <item
-            android:id="@+id/nav_manage"
-            android:icon="@drawable/ic_menu_manage"
-            android:title="Tools" />
+            android:id="@+id/navl_explore"
+            android:title="@string/action_explore" />
     </group>
 
-    <item android:title="Communicate">
+    <item android:title="My Menu"
+        android:id="@+id/my_menu_item">
+        <!-- A empty SubMenu -->
+        <menu></menu>
+    </item>
+
+    <item android:title="@string/personalFeeds">
         <menu>
             <item
-                android:id="@+id/nav_share"
-                android:icon="@drawable/ic_menu_share"
-                android:title="Share" />
-            <item
-                android:id="@+id/nav_send"
-                android:icon="@drawable/ic_menu_send"
-                android:title="Send" />
+                android:id="@+id/navl_all"
+                android:title="@string/action_all" />
         </menu>
     </item>
+
+    <item
+        android:id="@+id/navl_settings"
+        android:title="@string/action_settings" />
+    <item
+        android:id="@+id/navl_log"
+        android:title="@string/action_login" />
 
 </menu>
